feature(user): create an endpoint to get user details
- create an endpoint to get the details of the logged in user

[Finishes #166058055]
